@@ -1,4 +1,5 @@
 bad_md5 = [
+        'c558dc2646c647f1d0aac375b098b25a',
         'e8a16287b2e57600ddaebd7839818e0b',
         'sentinel'
 ]
