@@ -1,5 +1,6 @@
 bad_md5 = [
         '6f893e99868b27501cc9e2e447787a45',
+        'cb79f95f901e6692bd04e3a131951033',
         'sentinel'
 ]
 
