@@ -4,6 +4,7 @@ bad_md5 = [
 
 good_md5 = [
         '1b25580f6bfa12cea96ecf62f0c56775',
+        '5dd1deb51e2ec7fdd87fcee9c5e99ad0',
         'c300e35c1a0aa8598afb6a62dc49a675',
         'sentinel'
 ]
